subiendo retos del lunes al miercoles

--- a/jsalazar/algoritmos/index.html
+++ b/jsalazar/algoritmos/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Estacionamiento</title>
 </head>
-<body>
-	<script src="test2.js"></script>
+<body>	
+	<script src="estacionamiento2.js"></script>
 </body>
 </html>
