--- a/jsalazar/algoritmos3/index.html
+++ b/jsalazar/algoritmos3/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Domino</title>
+	<title>Ejercicios</title>
 </head>
-<body>
-	<script src="tablamult.js"></script>
+<body>	
+	<script src="ejer01.js"></script>
 </body>
 </html>
