--- a/jsalazar/algoritmos3/index2.html
+++ b/jsalazar/algoritmos3/index2.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Domino</title>
+	<title>Array</title>
 </head>
-<body>
-	<script src="tablamult.js"></script>
+<body>	
+	<script src="informearray.js"></script>
 </body>
 </html>
