agregando el resto de los ejercicios

--- a/jsalazar/algoritmos5/index.html
+++ b/jsalazar/algoritmos5/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Edades</title>
+	<title>Raiz Cuadrada</title>
 </head>
-<body>	
-	<script src="edades.js"></script>
+<body>
+	<script src="raizcuadrada.js"></script>
 </body>
 </html>
