--- a/jsalazar/algoritmos6/index.html
+++ b/jsalazar/algoritmos6/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Edades</title>
+	<title>Eliminar y agregad elementos en un arreglo</title>
 </head>
 <body>	
-	<script src="edades.js"></script>
+	<script src="aa.js"></script>
 </body>
 </html>
