agregando battleship y otros algoritmos

--- a/jsalazar/algoritmos8/index.html
+++ b/jsalazar/algoritmos8/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Battleship</title>
+	<title>Factorial Recursivo</title>
 </head>
 <body>	
-	<script src="aa.js"></script>
+	<script src="factorialrecursivo.js"></script>
 </body>
 </html>
